# task_weather

./: .gitignore  README.md  manage.py  pyproject.toml
_project_/: asgi.py  settings.py  urls.py  wsgi.py
weather/: forms.py  models.py  tests.py  urls.py  views.py
weather/migrations/: 0001_initial.py
weather/templates/registration/: logged_out.html
weather/templates/weather/: home.html
